<resources>
    <string name="app_name">MyCalculator</string>
    <string name="Calc">Calculator</string>
    <string name="Enter_first_number">Enter first Number</string>
    <string name="Enter_second_number">Enter second Number</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="Divide">/</string>
    <string name="Result">Result</string>

</resources>